Update privacy policy pages
- Add Data Category section to main privacy policy
- Update CCPA jump-link to Data Category section

--- a/static-pages/privacy-policy/index.html
+++ b/static-pages/privacy-policy/index.html
@@ -21,6 +21,7 @@ css: [/css/privacy-policy.css]
     <li><a href="#eu-us-dpf">EU-U.S. Data Privacy Framework (EU-U.S. DPF), the UK Extension to the EU-U.S. DPF, and the Swiss-U.S. Data Privacy Framework (Swiss-U.S. DPF) Participation</a></li>
     <li><a href="#data-retention-and-integrity">Data Retention and Integrity</a></li>
     <li><a href="#third-party-websites">Third Party Websites</a></li>
+    <li><a href="#data-category">Data Category</a></li>
     <li><a href="#updates-to-this-privacy-notice">Updates to This Privacy Notice</a></li>
     <li><a href="#contact-us">Contact Us</a></li>
   </ul>
@@ -152,6 +153,130 @@ css: [/css/privacy-policy.css]
 <section id="third-party-websites">
   <h2>Third Party Websites</h2>
   <p>Aquent may provide links to the websites of a limited number of third parties. This Privacy Notice applies to the Aquent websites, not to third party websites. Aquent is not responsible for the content, reliability, security, or privacy practices of these third-party websites.</p>
+  <div class="to-top-link">
+    <a href="#main"><b>Back to top</b></a>
+  </div>
+</section>
+
+<section id="data-category">
+  <h2>Data Category</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Data Category</th>
+        <th>Purpose</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <p><strong>HR Data, which includes information received from employees (Talent an internal staff), and applicants such as:</strong></p>
+          <ul>
+            <li>Employee (Talent and internal staff) and applicant contact details (and link to social media if provided) – name, business and/or personal phone, email, address</li>
+            <li>Identification and proof of employment eligibility documents which may contain demographic data such as name, dob, age, gender, citizenship, work authorization status. (ssn, drivers license number, state ID number)</li>
+            <li>Work history, performance, discipline, work samples (ex. Portfolio images)</li>
+            <li>Education, training, and career interests</li>
+            <li>Health and safety information related to or needed for emergency contacts, sick time, medical leave, or accommodation/accessibility purposes</li>
+            <li>Other information required for employment purposes, such as payment of compensation and benefits and maintenance of employment records (may include information such as student loans, interview records, receipts and invoices for reimbursements)</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>Communication regarding finding work, problem resolution, other employment related matters.</li>
+            <li>Business and Employment records</li>
+            <li>Recruitment</li>
+            <li>Payment and required withholdings</li>
+            <li>Talent and staff onboarding</li>
+            <li>Background checks in accordance with applicable law.</li>
+            <li>Employment eligibility verification</li>
+            <li>Performance management</li>
+            <li>Payment and tracking of benefits</li>
+            <li>Disability accessibility and accommodation requirements</li>
+            <li>Expense reimbursement</li>
+            <li>Legal requirements</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td><p><strong>Information received from Client, Prospective Client and Prospective Talent (applicants) Information which may include business contact details, job title, industry, Company, IP address.</strong></p></td>
+        <td>
+          <ul>
+            <li>To provide services, for operational purposes, and to improve our products and services</li>
+            <li>To enable access to systems such as MyAquent</li>
+            <li>Sales and marketing</li>
+            <li>Recruiting</li>
+            <li>Billing</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td><p><strong>Information received from third parties such as vendors, credit reference agencies, background screening companies including company number, VAT number, bank details, contact details (which may be personal data in some instances).</strong></p></td>
+        <td>
+          <ul>
+            <li>Payment</li>
+            <li>Business records</li>
+            <li>Legal requirements</li>
+            <li>To verify identity, credit worthiness</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td><p><strong>Information we collect from you that falls into special categories of data including:</strong></p>
+          <ul>
+            <li>Health data regarding a condition or disability, or leaves of absence and family leaves</li>
+            <li>Background screening data which may include drug, alcohol and criminal background checks.</li>
+            <li>Certain demographic data such as race, gender, sexual orientation, religious of philosophical beliefs, trade union membership</li>
+            <li>Biometric data such as a photo and fingerprints</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>Legal requirements</li>
+            <li>To comply with contractual commitments where permitted by law</li>
+            <li>To provide employment related benefits</li>
+            <li>Health and safety of employees</li>
+            <li>Subject to legal requirements, some demographic data may also be used to improve diverse representation in our candidate submissions, to direct talent outreach, and to develop resources that support our talent community and foster an inclusive environment. Your demographic data is not disclosed to clients or Aquent Agents. Clients may be provided reporting of aggregated data to help them understand the composition of their candidate pool and assist them in managing their diversity recruiting effort, but personally identifiable demographic data is not shared with them. Disclosure of demographic data is completely voluntary and self-reported.</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td><p><strong>Information we collect through your use of our website including:</strong></p>
+          <ul>
+            <li>Website user credentials such as User ID and password.</li>
+            <li>General Location data, for example if you provide us with the Aquent market closest to your location.</li>
+            <li>Information collected through the use of Cookies and similar technologies (see our Cookies Notice for more information)</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>Marketing and communication regarding topics we believe are relevant to you, management and improvement of websites</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><strong>Information Collected from Aquent Gymnasium registered users including:</strong></p>
+          <ul>
+            <li>Name</li>
+            <li>Email address</li>
+            <li>User name</li>
+            <li>Password</li>
+            <li>Gymnasium Course Records</li>
+            <li>Information from your LinkedIn profile if you create your account using LinkedIn</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>to communicate with you about Aquent Gymnasium and other products and services in which you may be interested,</li>
+            <li>to maintain your user account and a record of your course work and certifications</li>
+            <li>Marketing</li>
+            <li>analysis and internal reporting</li>
+            <li>User support</li>
+          </ul>
+        </td>
+      </tr>
+    </tbody>
+  </table>
   <div class="to-top-link">
     <a href="#main"><b>Back to top</b></a>
   </div>
