Update privacy policy pages
- Update link redirects

--- a/static-pages/privacy-policy/index.html
+++ b/static-pages/privacy-policy/index.html
@@ -37,7 +37,7 @@ css: [/css/privacy-policy.css]
     <li>all locations where Aquent operates, even where local regulations do not exist; and</li>
     <li>all methods of contact, including in person, written, via the internet, direct mail, telephone or facsimile.</li>
   </ul>
-  <p>Scout Exchange LLC is an Aquent affiliate and maintains its own privacy policy applicable to its services. For any questions about Scout exchanges Privacy Practices, please refer to the privacy policy located <a href="https://www.aquentscout.com/privacy-policy/">here</a>, or contact <a href="mailto:privacy@aquentscout.com">privacy@aquentscout.com</a>.</p>
+  <p>Scout Exchange LLC is an Aquent affiliate and maintains its own privacy policy applicable to its services. For any questions about Scout exchanges Privacy Practices, please refer to the privacy policy located <a href="https://aquentscout.com/privacy-policy/">here</a>, or contact <a href="mailto:privacy@aquentscout.com">privacy@aquentscout.com</a>.</p>
   <div class="to-top-link">
     <a href="#main"><b>Back to top</b></a>
   </div>
@@ -85,7 +85,7 @@ css: [/css/privacy-policy.css]
   <h2>Cookies</h2>
   <p>Aquent uses cookies to help us personalize, secure, and improve the performance of our websites and services. (More Information)</p>
   <p>Cookies are small text files that we place on the device you use to access our websites and services. Most internet browsers permit a user to accept, decline or delete cookies. You can control the use of cookies at the individual browser level but if you choose to disable cookies, it may limit your use of certain features or functions on our websites. Click below to adjust your cookies settings.</p>
-  <p><a href="https://aquent.com/privacy-policy/">View more information</a> on our cookies policy and to adjust your cookies settings.</p>
+  <p><a href="https://aquent.com/privacy-policy">View more information</a> on our cookies policy and to adjust your cookies settings.</p>
   <div class="to-top-link">
     <a href="#main"><b>Back to top</b></a>
   </div>
@@ -135,7 +135,7 @@ css: [/css/privacy-policy.css]
 <section id="eu-us-dpf">
   <h2>EU-U.S. Data Privacy Framework (EU-U.S. DPF), the UK Extension to the EU-U.S. DPF, and the Swiss-U.S. Data Privacy Framework (Swiss-U.S. DPF) Participation</h2>
   <p>Aquent complies with theEU-U.S. DPF, the UK Extension to the EU-U.S. DPF, and the Swiss-U.S. DPF as set forth by the US Department of Commerce regarding the collection, use and retention of personal information from Switzerland, the United Kingdom, and European Union member countries. For more information, please <a href="https://thegymnasium.com/privacy-policy/privacy-shield-notice">view our Data Privacy Framework Notice.</a></p>
-  <p>To learn more about the Data Privacy Framework (DPF) program, and to view our certification, please visit <a href="https://www.dataprivacyframework.gov" target="_blank" rel="noopener">https://www.dataprivacyframework.gov</a>.</p>
+  <p>To learn more about the Data Privacy Framework (DPF) program, and to view our certification, please visit <a href="https://www.dataprivacyframework.gov/s/" target="_blank" rel="noopener">https://www.dataprivacyframework.gov/s/</a>.</p>
   <div class="to-top-link">
     <a href="#main"><b>Back to top</b></a>
   </div>
