change short_description to description

--- a/courses/index.html
+++ b/courses/index.html
@@ -24,7 +24,7 @@ permalink: /courses/
       <h1>{{ main.header.title }}</h1>
       <p>
         <strong class="block">{{ main.header.tagline }}</strong>
-        {{ main.header.short_description }}
+        {{ main.header.description }}
       </p>
     </div>
   </header>
