Add page level redirect support

--- a/hub-pages/remote-work/index.html
+++ b/hub-pages/remote-work/index.html
@@ -2,6 +2,7 @@
 layout: wrapper-full-default
 permalink: /remote-work/
 css: [/css/hub-pages.css]
+redirect: /career-skills
 ---
 {%- assign main = site.data.pages.courses -%}
 
