Update collection page
- Update language

--- a/hub-pages/career-skills/index.html
+++ b/hub-pages/career-skills/index.html
@@ -16,7 +16,7 @@ css: [/css/hub-pages.css]
           <div class="col-md-12">
             <header>
               <h1>Career Skills</h1>
-              <p>Explore our free career skills collection for <a href="#courses"><b>courses</b></a>, <a href="#tutorials"><b>tutorials</b></a>, and <a href="#articles"><b>articles</b></a>. See our <a href="/jobs"><b>jobs</b></a> for Aquent’s salary guides.</p>
+              <p>Explore our free career skills collection of <a href="#courses"><b>courses</b></a>, <a href="#tutorials"><b>tutorials</b></a>, and <a href="#articles"><b>articles</b></a>. See <a href="/jobs"><b>jobs</b></a> for Aquent’s salary guides.</p>
             </header>
             <div class="cols cols-max-3" id="featured">
               <ul>
@@ -275,7 +275,7 @@ css: [/css/hub-pages.css]
       <div class="section-content">
         <header>
           <h2 class="all-caps">Articles</h2>
-          <p>TK</p>
+          <p>Read bookmark-worthy blog posts on career skills.</p>
         </header>
         <div class="subsection list-hr" id="portfolio">
           <header>
