Use career skills link on courses index

--- a/courses/index.html
+++ b/courses/index.html
@@ -271,7 +271,7 @@ permalink: /courses/
                       <dd><a href="{{ site.gymurl }}/ux-design">UX Design</a></dd>
                       <dd><a href="{{ site.gymurl }}/prototyping">Prototyping</a></dd>
                       <dd><a href="{{ site.gymurl }}/accessibility">Accessibility</a></dd>
-                      <dd><a href="{{ site.gymurl }}/remote-work">Remote Work</a></dd>
+                      <dd><a href="{{ site.gymurl }}/career-skills">Career Skills</a></dd>
                     </div>
                   </dl>
                 </div>
