Update salary guides
- Update URLs
- Add 2024 artwork

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -21,7 +21,7 @@ css: [/css/hub-pages.css]
                       <h2 class="all-caps">Salary Guides</h2>
                     </header>
                     <figure class="full-width">
-                      <img alt="2023 Salary Guide" src="{{ site.url }}/img/jobs/featured/salary-guide-2023.jpg" width="1280" height="720" decoding="async">
+                      <img alt="2024 Salary Guide" src="{{ site.url }}/img/jobs/featured/salary-guide-2024.jpg" width="1280" height="720" decoding="async">
                     </figure>
                     <h3 class="all-caps" hidden>See How Your Salary & Benefits Stack Up</h3>
                   </div>
@@ -106,12 +106,12 @@ css: [/css/hub-pages.css]
             </li>
             <li>
               <h3>
-                <a href="https://brand.aquent.com/salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_slg23&utm_content=jobs-salary-guides" target="_blank" rel="noopener">US Salary Guide</a>
+                <a href="https://aquent.com/lp/salary-guide/" target="_blank" rel="noopener">US Salary Guide</a>
               </h3>
             </li>
             <li>
               <h3>
-                <a href="https://brand.aquent.com/UK-salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_UK_slg23&utm_content=slg23" target="_blank" rel="noopener">UK Salary Guide</a>
+                <a href="https://aquent.co.uk/lp/salary-guide/" target="_blank" rel="noopener">UK Salary Guide</a>
               </h3>
             </li>
           </ul>
