Update livestreams page
- Update comment

--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -1,6 +1,6 @@
 ---
 layout: wrapper-full-default
 permalink: /livestreams/
-{# css: [/css/hub-pages.css] #}
+# css: [/css/hub-pages.css
 ---
 Stub for livestreams...
