Update jobs page
- Update article URLs to avoid redirects

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -194,7 +194,7 @@ css: [/css/hub-pages.css]
             </li>
             <li>
             <h3>
-              <a href="https://aquenttalent.com/blog/how-to-create-a-great-linkedin-profile-for-designers" target="_blank" rel="noopener">How to Create a Great LinkedIn Profile for Designers</a>
+              <a href="https://aquenttalent.com/blog/how-to-create-a-great-designer-linkedin-profile" target="_blank" rel="noopener">How to Create a Great LinkedIn Profile for Designers</a>
             </h3>
             </li>
             <li>
@@ -233,7 +233,7 @@ css: [/css/hub-pages.css]
             </li>
             <li>
             <h3>
-              <a href="https://aquenttalent.com/blog/52-favorite-interview-questions-from-top-design-leaders" target="_blank" rel="noopener">52 Favorite Interview Questions From Top Design Leaders</a>
+              <a href="https://aquent.com/blog/52-favorite-interview-questions-from-top-design-leaders" target="_blank" rel="noopener">52 Favorite Interview Questions From Top Design Leaders</a>
             </h3>
             </li>
             <li>
@@ -253,7 +253,7 @@ css: [/css/hub-pages.css]
             </li>
             <li>
             <h3>
-              <a href="https://aquenttalent.com/blog/top-10-must-ask-interview-questions-for-designers" target="_blank" rel="noopener">Top 10 Must-Ask Interview Questions for Designers</a>
+              <a href="https://aquenttalent.com/blog/top-10-must-ask-design-interview-questions" target="_blank" rel="noopener">Top 10 Must-Ask Interview Questions for Designers</a>
             </h3>
             </li>
           </ul>
@@ -357,7 +357,7 @@ css: [/css/hub-pages.css]
             </li>
             <li>
             <h3>
-              <a href="https://aquenttalent.com/blog/the-5-critical-skills-you-need-to-advance-in-ux" target="_blank" rel="noopener">The 5 Critical Skills You Need to Advance in UX</a>
+              <a href="https://aquenttalent.com/blog/the-5-critical-ux-designer-skills-you-need-to-advance" target="_blank" rel="noopener">The 5 Critical Skills You Need to Advance in UX</a>
             </h3>
             </li>
             <li>
@@ -435,7 +435,7 @@ css: [/css/hub-pages.css]
             </li>
             <li>
             <h3>
-              <a href="https://aquenttalent.com/blog/unpacking-the-hiring-process-questions-you-can-ask-to-identify-bias" target="_blank" rel="noopener">Unpacking the Hiring Process: Questions You Can Ask to Identify Bias</a>
+              <a href="https://aquenttalent.com/blog/questions-you-need-to-ask-to-identify-hiring-bias" target="_blank" rel="noopener">Unpacking the Hiring Process: Questions You Can Ask to Identify Bias</a>
             </h3>
             </li>
             <li>
