Update home page hero
- Update livestreams promo hero
- Remove livestream
- Update variable name

--- a/tests/hero/hero-test-index.html
+++ b/tests/hero/hero-test-index.html
@@ -19,7 +19,7 @@ permalink: /tests/hero
 
 <h2>Live Stream Hero</h2>
 
-<p><a href="/tests/hero-live-stream">live_stream</a>: <code>{{ hero.live_stream }}</code></p>
+<p><a href="/tests/hero-live-stream">live_stream</a>: <code>{{ hero.livestream }}</code></p>
 
 <p>
   <b>Source:</b>
