Update jobs page
- Update featured heading

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -36,7 +36,7 @@ css: [/css/hub-pages.css]
                 <div class="card-content featured">
                   <div class="card-main no-subhead equal-h">
                     <header class="full-width">
-                      <h2 class="all-caps">Job Search</h2>
+                      <h2 class="all-caps">Job Listings</h2>
                     </header>
                     <figure class="full-width">
                       <img alt="Find work with Aquent in over 35 offices around the globe." src="{{ site.url }}/img/jobs/featured/find-work.jpg" width="1280" height="720" decoding="async">
