Update anniversary page
- Comment private videos
- Add 2015 Open edX talk

--- a/static-pages/anniversary/index.html
+++ b/static-pages/anniversary/index.html
@@ -86,6 +86,7 @@ banner: false
         <small>Aquent Gymnasium promo video from July 2013.</small>
         </figcaption>
       </figure>
+      <!--
       <figure>
         <div class="iframe-video-holder aspect-legacy-1">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/qYqIS2CSH28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -94,6 +95,7 @@ banner: false
         <small>Aquent Gymnasium Launch Party — London</small>
         </figcaption>
       </figure>
+      -->
       <figure>
         <img alt="Gymnasium homepage circa 2013 with original yellow color theme." src="{{ img_path }}homepages/gym-homepape-hero-2013-06-06-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
@@ -112,6 +114,7 @@ banner: false
         <small>The Gymnasium <a href="https://web.archive.org/web/20131123134750/http://thegymnasium.com/catalog" target="_blank" rel="noopener">catalog</a> featuring <cite>Coding for Designers</cite> (July) and <cite>Responsive Web Design</cite> (October) in 2013.</small>
         </figcaption>
       </figure>
+      <!--
       <figure>
         <div class="iframe-video-holder aspect-legacy-2">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/4PiVJvIzX_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -120,6 +123,7 @@ banner: false
         <small><cite>Responsive Web Design</cite> course promo in December 2013</small>
         </figcaption>
       </figure>
+      -->
     </div>
     <aside>
       <h3>From the Archives</h3>
@@ -168,6 +172,14 @@ banner: false
         <img alt="" src="{{ img_path }}homepages/gym-homepage-hero-2016-01-11-1920w.jpg" width="1920" height="1080" decoding="async">
         <figcaption>
           <small>Gymnasium <a href="https://web.archive.org/web/20160306065332/http://gymnasium.aquent.com/" target="_blank" rel="noopener">homepage</a> in late 2015 (and 2016).</small>
+        </figcaption>
+      </figure>
+      <figure>
+        <div class="iframe-video-holder">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/5DiJ_2Bz2hM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <figcaption>
+        <small>Open edX Conference 2015 Talk — <cite>Building the Plane While Flying It: Migrating an Existing MOOC to edX</cite> with Andrew Miller, Jeremy Osborn, and Mike Bifulco (October 13, 2015).</small>
         </figcaption>
       </figure>
     </div>
